@@ -1,4 +1,8 @@
 Changes for 1.6.1.1
+* Fixing movement validation to allow submarines that are transports to carry land units through other ships. (veqryn)
+
+* Forcing default map selection when TripleA starts to avoid the last file path uri used if it is not within the user's triplea folder or the program's folder. (veqryn)
+
 * Fixing bug with connections being lost during end of Air Battles, resulting in a game that can not continue. (veqryn)
 
 * Made xml exporter also add original territory owner as occupiedTerrOf until such a time as we can just use originalOwner. (veqryn)
